@@ -252,9 +252,12 @@ REDIRECT       net     -       tcp     80      -       1.2.3.4</programlisting>
 
       <para>You can 'omit' parameters by using '-'.</para>
 
-      <para>Example: ACTION(REDIRECT,-,info) </para>
+      <para>Example: ACTION(REDIRECT,-,info)</para>
 
       <para>In the above example, $2 would expand to nothing.</para>
+
+      <para>If you want to make '-' a parameter value, use '--' (e.g.,
+      ACTION(REDIRECT,--.info)).</para>
     </section>
 
     <section>
