@@ -131,7 +131,8 @@ Beta 1
 
     You can 'omit' a parameter in the list by using '-' (e,g,
     REDIRECT,-.info) would omit the second parameter (within the action
-    body, $2 would expand to nothing). 
+    body, $2 would expand to nothing). If you want to specify '-' as an
+    parameter value, use '--'.
     
     Parameter values are also available to extensions scripts. See
     http://www.shorewall.net/Actions.html#Extension for more
